--- a/_posts/2020-09-06-fs_be.md
+++ b/_posts/2020-09-06-fs_be.md
@@ -35,7 +35,7 @@ $$
 
 
 
-## Forward Selection / Backward Elimination
+# Forward Selection / Backward Elimination
 
 다음으로 전진 선택과 후진 제거를 알아보겠습니다. 이 두 방법은 성능을 어느 정도 유지하면서 전역 탐색에서 걸리는 시간을 극적으로 줄인 방법입니다. 시간-성능 그래프에 두 방법을 나타내면 다음과 같이 나타낼 수 있습니다.
 
@@ -43,7 +43,7 @@ $$
 
 <p align="center"><img src="https://user-images.githubusercontent.com/45377884/92316355-acb59f80-f02d-11ea-908a-8b9f335676d4.png" alt="fsbe" style="zoom:50%;" /></p>
 
-### Forward Selection
+## Forward Selection
 
 **전진 선택(Forward selection)**은 *가장 유의미한 특성을 선택해나가는 방식* 입니다. 아무런 특성이 없는 상태부터 시작해서 특성을 늘려나가는 방향(Forward)으로 나아갑니다. 매 단계마다 가장 성능이 좋은 특성을 선택한 뒤에 유의미한 성능이 없을 때까지 이 과정을 실행해 나갑니다. 아래는 전진 선택의 과정을 나타낸 이미지입니다.
 
@@ -92,7 +92,7 @@ $$
 
 $x_1,x_2,x_5$중에서 어떤 특성을 추가하더라도 대조군인 $\hat{y} = \hat{\beta_0} + \hat{\beta_3}x_3 +  \hat{\beta_4}x_4$ 보다 성능이 좋아지지 않았으므로 여기서 과정을 멈추고 $\hat{y} = \hat{\beta_0} + \hat{\beta_3}x_3 +  \hat{\beta_4}x_4$ 을 특성 선택의 결과물로 선정합니다.
 
-### Backward Elimination
+## Backward Elimination
 
 **후진 제거(Backward elimination)**는 *무의미한 특성을 제거해나가는 방식* 입니다. 반대로 모든 특성을 가진 모델에서 시작하여 특성을 하나씩 줄여나가는 방향(Backward)으로 나아갑니다. 특성을 제거했을 때 가장 성능이 좋은 모델을 선택함며 유의미한 성능 저하가 나타날 때까지 이 과정을 반복합니다. 아래는 후진 제거의 과정을 나타낸 이미지입니다.
 
@@ -142,7 +142,6 @@ $$
 
 
 $x_4$특성을 제거한 모델이 가장 높은 성능을 보였지만, 이 모델의 $R^2_\text{adj}$은 대조군에 비하여 임곗값보다 더 많이 감소한 것을 볼 수 있습니다. 그렇기 때문에 대조군에 해당하는 $\hat{y} = \hat{\beta_0} + \hat{\beta_2}x_2 + \hat{\beta_3}x_3 + \hat{\beta_5}x_5$을 최종 모델로 선택합니다.
-
 
 ## Stepwise Selection
 
