--- a/_posts/2020-06-20-nlp_lda.md
+++ b/_posts/2020-06-20-nlp_lda.md
@@ -43,20 +43,19 @@ tag: NLP
 
 위 그래프 표현에서 사각형은 각 화살표 단계를 반복함을 나타냅니다. $D, N, K$는 각각 문서, 단어, 주제를 타나냅니다. 파라미터를 나타내고 있는 각 노드를 자세히 보도록 하겠습니다. $\phi_k$는 각 주제에 대한 단어의 분포를 나타내며 $\theta_d$는 각 문서마다 어떤 비중으로 섞여있는 지를 나타냅니다. $z$ 는 $d$ 번째 문서에서 $n$ 번째에 등장하는 단어 $w_{d,n}$이 어떤 주제로부터 추출된 것인가를 나타내는 파라미터입니다.
 
-양쪽 화살표의 출발이 되는 $\alpha, \beta$는 하이퍼파라미터입니다. 왼쪽에서 시작하는 $\alpha$를 보도록 하겠습니다.
+양쪽 화살표의 출발이 되는 $\alpha, \beta$는 디리클레 분포에서의 하이퍼파라미터입니다. 왼쪽에서 시작하는 $\alpha$를 보도록 하겠습니다. 이 하이퍼파라미터는 각 문서의 주제 비중을 할당하는 $\theta_d$에 영향을 미칩니다. 이렇게 결정된 $\theta_d$는 문서에 등장하는 각 단어가 어떤 주제로부터 추출된 것인지를 계산한 $z_{d, n}$에 영향을 줍니다.
 
-각 노드에서 뻗어나가는 엣지는 의존성을 나타낸다. 먼저 가장 왼쪽의 엣지부터 살펴보자. 가장 왼쪽의 엣지는 디리클레 분포를 따르는 $\alpha$ 로부터 $\theta_d$ , 즉 문서마다 있는 주제의 비중을 할당하게 된다. 이로부터 다시 $z_{d,n}$ 으로 나타나는 문서에 등장하는 단어들이 어느 주제로부터 추출된 것인지를 계산해낸다.
+오른쪽은 주제와 관련된 엣지입니다. 시작하는 하이퍼파라미터 $\beta$는 각 주제에 대한 단어 분포인 $\phi_k$를 결정합니다. 그리고 이 값과 이전에 계산한 $z$를 통해서 우리가 관측할 수 있는 값인 $w_{d,n}$를 결정하게 됩니다. 잠재 디리클레 할당에서는 각 단억 모두 독립적으로 생성됨을 가정하고 있으며 위 그래프 표현을 수식으로는 아래와 같이 나타낼 수 있습니다.
 
-주제와 관련된 반대편의 엣지를 보자. 마찬가지로 디리클레 분포를 따르는 $\beta$ 로부터 각 주제에 대한 단어의 분포인 $\phi_k$ 를 알아낸다. 그리고 이 값과 이전에 계산한 $z$ 를 통해서 우리가 관측할 수 있는 값인 $w$, 즉 그 단어가 그 주제에 속하는 단어 중 어떤 것인지를 결정하게 된다. 잠재 디리클레 할당에서 각 단어는 모두 독립적으로 생성된다고 가정하고 있으며 위 그래프 표현을 수식으로 나타내면 아래와 같이 나타낼 수 있다.
 
 
 $$
-p(\phi_{1:K}, \theta_{1:D}, z_{1:D}, w_{1:D}) = \\
-\prod^K_{i=1}p(\phi_i|\beta)\prod^D_{d=1}p(\theta_d|\alpha)\prod^N_{n=1}p(z_{d,n}|\theta_d)p(w_{d,n}|\phi_{1:K},z_{d,n})
+p(\phi_{1:K}, \theta_{1:D}, z_{1:D}, w_{1:D}) =\prod^K_{i=1}p(\phi_i|\beta)\prod^D_{d=1}p(\theta_d|\alpha)\prod^N_{n=1}p(z_{d,n}|\theta_d)p(w_{d,n}|\phi_{1:K},z_{d,n})
 $$
 
 
-위 수식에서 첫 번째 식은 맨 오른쪽 엣지인 $\beta$ 로부터 $\phi$ 를 추정하는 엣지이고 두 번째 식은 $\alpha$ 로부터 문서별 주제 분포 $\theta$ 를 알아내는 것이므로 맨 왼쪽 엣지를 나타낸다. 나머지 엣지들은 세 번째 식에 표현이 된다. 세 번째 식에서 앞부분은 왼쪽에서 2번째 엣지를, 마지막 식은 $w$ 양쪽으로 들어오는 엣지를 나타낸다. 조건부 확률로 나타내어져 있는 식을 좀 더 자세히 풀어 써보도록 하자.
+
+등호 오른쪽의 식에서 첫 번째 항은 맨 오른쪽 엣지인 $\beta$로부터 $\phi$를 추정하는 과정을 나타냅니다. 두 번째 항은 $\alpha$로부터 문서별 주제 분포인 $\theta$를 알아내는 과정인 맨 왼쪽 엣지를 나타냅니다. 마지막 항은 나머지 모든 엣지를 표현하고 있습니다. 마지막 항의 앞부분은 왼쪽에서 2번째 엣지를, 뒷부분은 $w$의 양쪽으로 들어오는 엣지를 나타냅니다. 조건부 확률로 나타내져 있는 식을 아래와 같이 풀어 쓸 수 있습니다.
 
 먼저 첫 번째 식은 아래와 같이 좀 더 자세하게 쓸 수 있다. $\Gamma$ 와 같은 것들은 아래 디리클레 분포에서 다룰 것이므로 일단은 넘어가도록 하자. 
 
