--- a/_posts/2020-06-20-nlp_lda.md
+++ b/_posts/2020-06-20-nlp_lda.md
@@ -55,24 +55,31 @@ $$
 
 
 
-등호 오른쪽의 식에서 첫 번째 항은 맨 오른쪽 엣지인 $\beta$로부터 $\phi$를 추정하는 과정을 나타냅니다. 두 번째 항은 $\alpha$로부터 문서별 주제 분포인 $\theta$를 알아내는 과정인 맨 왼쪽 엣지를 나타냅니다. 마지막 항은 나머지 모든 엣지를 표현하고 있습니다. 마지막 항의 앞부분은 왼쪽에서 2번째 엣지를, 뒷부분은 $w$의 양쪽으로 들어오는 엣지를 나타냅니다. 조건부 확률로 나타내져 있는 식을 아래와 같이 풀어 쓸 수 있습니다.
+등호 오른쪽의 식에서 첫 번째 항은 맨 오른쪽 엣지인 $\beta$로부터 $\phi$를 추정하는 과정을 나타냅니다. 두 번째 항은 $\alpha$로부터 문서별 주제 분포인 $\theta$를 알아내는 과정인 맨 왼쪽 엣지를 나타냅니다. 마지막 항은 나머지 모든 엣지를 표현하고 있습니다. 마지막 항의 앞부분은 왼쪽에서 2번째 엣지를, 뒷부분은 $w$의 양쪽으로 들어오는 엣지를 나타냅니다.
 
-먼저 첫 번째 식은 아래와 같이 좀 더 자세하게 쓸 수 있다. $\Gamma$ 와 같은 것들은 아래 디리클레 분포에서 다룰 것이므로 일단은 넘어가도록 하자. 
+조건부 확률로 나타내져 있는 식을 풀어서 써보겠습니다. 첫 번째 항인 $p(\phi|\beta)$는 아래와 같이 풀어쓸 수 있습니다.
+
+ 
 
 
 $$
 p(\phi|\beta) = \prod^K_{k=1} \frac{\Gamma(\beta_{k,\cdot})}{\prod^V_{v=1}\Gamma(\beta_{k,v})} \prod^V_{v=1}\phi_{k,v}^{\beta_{k,v}-1}
 $$
 
-두 번째 식을 자세히 쓰면 아래와 같은 식이 도출된다. 
 
+
+두 번째 항인 $p(\theta|\alpha)$ 은 다음과 같이 풀어쓸 수 있습니다.
+
+ 
 
 $$
 p(\theta|\alpha) = \frac{\Gamma(\sum^K_{k=1}\alpha_k)}{\prod^K_{k=1}\Gamma(\alpha_k)} \prod^K_{k=1}\theta_k^{\alpha_k-1}
 $$
 
 
-세 번째 식에서 앞부분 $p(z \vert \theta)$ 를 자세히 쓰면 다음과 같다.
+
+세 번째 항의 앞부분 $p(z \vert \theta)$ 를 자세히 쓰면 다음과 같이 나타낼 수 있습니다.
+
 
 
 $$
@@ -80,8 +87,8 @@ p(z|\theta) = \prod^D_{d=1}\prod^K_{k=1} \theta_{d,k}^{n_{d,k}}
 $$
 
 
-마지막 부분 $p(w \vert z,\theta)$ 은 다음과 같이 쓸 수 있다.
 
+뒷부분인 $p(w \vert z,\theta)$ 은 다음과 같이 쓸 수 있습니다
 
 $$
 p(w \vert z,\theta) = \prod^K_{k=1}\prod^V_{v=1} \phi_{k,v}^{n_{\cdot ,d,k}}
@@ -91,11 +98,13 @@ $$
 
 ## 디리클레 분포(Dirichlet Distribution)
 
-위 식들 중 $\Gamma$ 와 그것이 사용된 식을 이해하기 위해서는 디리클레 분포에 대한 이해가 필요하다. 이항 분포부터 다항 분포, 베타 분포를 거쳐 디리클레 분포까지 가는 과정을 알아보도록 하자.
+위 식의 $\Gamma$ 로 나타나는 부분을 이해하기 위해서는 디리클레 분포라는 [확률 분포](https://yngie-c.github.io/machine%20learning/2020/04/04/prob_and_dist/)에 대한 이해가 필요합니다. 여러 확률 분포 중 0과 1, 성공과 실패처럼 2개의 클래스가 있는 사건이 있습니다. 이런 사건의 확률 분포를 나타내는 것을 이항 확률 분포라고 합니다. 하지만 모든 사건의 클래스가 2개인 것은 아닙니다. 확률의 대명사(?)인 주사위만 보더라도 6개의 클래스를 가진 사건이지요. 이런 3개 이상의 클래스를 나타내는 사건에 대한 확률 분포를 다항 확률 분포라고 합니다.
 
-0과 1, 성공과 실패 등 클래스가 2개인 사건이 일어나는 것들이 있다. 각각의 사건을 독립으로 보고 한 사건이 일어날 확률 분포를 나타낸 것을 **이항 확률 분포(Binomial Distribution)** 라고 한다. 이를 주사위처럼 일어나는 클래스가 3개 이상인 것들로 확장해보자. 이 때 한 사건이 일어날 확률 분포를 **다항 확률 분포(Multinomial Distribution)** 라고 한다.
+확률 분포에 대한 확률 분포가 있을 수 있습니다. 예를 들어, 동전을 2번 던져 앞면과 뒷면이 각각 1번 나왔다면 각 사건에 대한 확률을 $1/2$로 추정할 수 있습니다. 그렇다면 동전을 10번 던져 앞면과 뒷면이 5번씩 나왔을 때와 100번 던져 앞면과 뒷면이 50번씩 나왔을 때를 생각해보겠습니다. 모든 경우에 대해서 각 사건이 일어날 확률은 $1/2$가 될 것입니다. 하지만 이렇게 추정할 수 있는 확률은 세 가지 경우에 대해서 모두 다르게 나올 것입니다. 아무래도 첫 번째 보다는 두 번째가, 두 번째 보다는 세 번째 경우에서 $1/2$라고 추정할 확률이 높겠지요.
 
-이 확률 분포들에 대한 확률 분포를 다시 생각해 볼 수 있다. 예를 들어, 동전을 2번 던져 앞, 뒷면이 각각 1번 나왔을 때와 10번 던져 앞, 뒷면이 5번씩 나왔을 때, 그리고 100번을 던져 앞, 뒷면이 각각 50번이 나왔을 경우를 생각해보자. 동전의 각 면이 나올 확률을 1/2로 추정할 수 있는 확률은 모두 다를 것이다. 누구나 첫 번째 경우보다는 두 번째가, 두 번째 경우보다는 마지막이 높다고 추정하기 때문이다. 이렇게 이항 분포에 대한 확률 분포를 나타낸 것을 **베타 분포(Beta Distribution)** 라고 하며 베타분포의 수식은 다음과 같이 나타낼 수 있다.
+이렇게 특정 확률 분포에 대해 확률 분포를 나타낼 수 있을 때, 이항 분포에 대해 확률 분포를 나타낸 것을 베타 분포라고 합니다. 베타 분포의 수식은 아래와 같이 나타낼 수 있습니다.
+
+
 
 
 $$
@@ -105,7 +114,9 @@ B(\alpha, \beta) = \int^1_0 t_{\alpha-1}(1-t)^{\beta-1}dt = \frac{\Gamma(\alpha)
 $$
 
 
-베타 분포가 이항 분포의 확률 분포를 나타낸 것이었다면 **디리클레 분포(Dirichlet Distribution)** 는 다항 분포의 확률 분포를 나타낸 것이다. 이를 식으로 나타내면 다음과 같이 나타낼 수 있다.
+
+이항 분포에 대해 확률 분포를 나타낸 것이 베타 분포였다면, 다항 분포에 대해 확률 분포를 나타낸 것은 디리클레 분포입니다.
+
 
 
 $$
@@ -113,7 +124,8 @@ p(P=\{p_i\}|\alpha_i) = \frac{\Gamma(\sum_i \alpha_i)}{\prod_i \Gamma(\alpha_i)}
 $$
 
 
-디리클레 분포는 중요한 특징을 가지고 있다. 사건이 일어난 상황에서 조건부 확률 분포를 그리더라도 그 확률 분포가 다시 디리클레 분포를 따른다는 것. 이를 식으로 나타내면 아래와 같이 쓸 수 있다. 아래에서 첫 번째 식은 아무 사건이 발생하지 않았을 때의 디리클레 분포 식이며 두 번째 식은 디리클레 분포에서 사건이 k번 발생하는 경우를 첫 번째 수식에 대입하여 나타낸 것이다. 마지막은 k번 발생했을 때의 확률 분포를 두 식을 결합하여 나타낸 것이다. 마지막 세 번째 식도 디리클레 분포식의 형태를 따르는 것을 볼 수 있다.
+
+디리클레 분포는 중요한 특징을 가지고 있습니다. 사건이 일어난 상황에서 조건부 확률 분포를 그리더라도 그 확률 분포가 다시 디리클레 분포를 따른다는 것입니다. 이를 수식으로 나타내면 아래와 같습니다.
 
 
 $$
@@ -122,7 +134,12 @@ p(x_1, \cdots, x_k|n, p_1, \cdots, p_k) = \frac{n!}{\prod_i^k x_i} \prod_i p_i^{
 p(\{p_i\}|x_1, \cdots, x_k) = \frac{\Gamma(N + \sum_i \alpha_i)}{\prod_i^k \Gamma(\alpha_i + x_i)} \prod_i p_i^{\alpha_i + x_i -1}
 $$
 
-각 $\alpha$ 값에 대한 디리클레 분포 변화를 살펴보자. 아래 그림에서 $\alpha$ 가 **큰 값(100)일 때는 모든 케이스가 비슷한 확률로 추정** 되지만 $\alpha$ 가 **작아질수록 점점 극단적** 으로 분포가 변해가는 것을 볼 수 있다. 
+
+첫 번째 식은 아무 사건도 발생하지 않았을 때의 디리클레 분포를 나타낸 식이며 두 번째 식은 디리클레 분포에서 사건이 $k$번 발생한 경우를 첫 번째 수식에 대입하여 나타낸 것입니다. 마지막은 $k$번 발생했을 때의 확률 분포를 두 식을 결합하여 나타낸 것입니다. 마지막 식도 디리클레 분포식의 형태라는 것을 알 수 있습니다.
+
+$\alpha$가 달라지면서 디리클레 분포가 어떤 형태를 나타내는지 알아보겠습니다. 아래 그림에서 $\alpha$ 큰 값일 때에는 모든 케이스가 비슷한 확률로 추정되지만, 작아지면서 점점 극단적인 분포를 나타내는 것을 볼 수 있습니다.
+
+
 
 <p align="center"><img src="https://user-images.githubusercontent.com/45377884/85116464-54ee7000-b258-11ea-8dbd-a84d59bb5d99.png" alt="lda_alpha" style="zoom:67%;" /></p>
 
@@ -130,11 +147,13 @@ $$
 
 
 
-잠재 디리클레 할당은 '특정 문서에는 소수의 주제만이 있을 것이다'라는 전제하에 일을 진행하므로 $\alpha$ 에는 1보다 작은 값을 주고 시작하게 되며, '주제별로 단어가 균일한 비중으로 있을 것임'을 전제로 하기 때문에 1에서 시작하여 더 높은 값으로 나아가게 된다. 이 $\alpha, \beta$ 는 하이퍼파라미터이므로 실행할 때마다 우리가 정해주어야 하는 값이며 컴퓨터가 최적화하는 대상은 아니다. Perplexity를 기준으로 GridSearch를 해주어 찾기도 한다.
+잠재 디리클레 할당은 '특정 문서마다 해당하는 소수의 주제가 있을 것이다'라는 전제하에 일을 진행하므로 일반적으로 $\alpha$에는 1보다 작은 값을 주고 시작하게 됩니다. 단어 쪽에서는 '주제별로 단어가 균일한 비중으로 있을 것이다'라는 전제를 갖기 때문에 $\beta$는 일반적으로 1이상의 값을 설정하여 학습을 시작합니다. 이 $\alpha, \beta$는 하이퍼파라미터이므로 실행할 때마다 우리가 정해주어야 하는 값이며 컴퓨터가 최적화하는 대상은 아닙니다.
 
 
 
 ## Gibbs Sampling
+
+잠재 디리클레 할당의 
 
 문서 내 단어 ( $\mathbf{w}$ ) 가 주어졌을 때의 잠재 변수( $\phi, \theta, \mathbf{z}$ )의 사후 확률을 구하는 수식은 다음과 같다.
 
