--- a/_posts/2020-10-1-pca.md
+++ b/_posts/2020-10-1-pca.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 주성분분석(Principal Component Analysis)
+title: 주성분분석(Principal Component Analysis, PCA)
 category: Machine Learning
 tag: Machine-Learning
 ---
