--- a/_posts/2020-10-2-mds.md
+++ b/_posts/2020-10-2-mds.md
@@ -77,16 +77,16 @@ $$
 
 $$
 \frac{1}{n}\sum^n_{r=1} d^2_{rs} = \frac{1}{n}\sum^n_{r=1}\mathbf{x}_r^T\mathbf{x}_r + \frac{1}{n}\sum^n_{r=1}\mathbf{x}_s^T\mathbf{x}_s - \frac{2}{n}\sum^n_{r=1}\mathbf{x}_r^T\mathbf{x}_s = \frac{1}{n}\sum^n_{r=1}\mathbf{x}_r^T\mathbf{x}_r + \mathbf{x}_s^T\mathbf{x}_s \\
-\color{blue} \therefore \mathbf{x}_s^T\mathbf{x}_s = \frac{1}{n}\sum^n_{r=1} d^2_{rs} - \frac{1}{n}\sum^n_{r=1}\mathbf{x}_r^T\mathbf{x}_r
+\color{blue}{\therefore \mathbf{x}_s^T\mathbf{x}_s = \frac{1}{n}\sum^n_{r=1} d^2_{rs} - \frac{1}{n}\sum^n_{r=1}\mathbf{x}_r^T\mathbf{x}_r}
 $$
- 
+
 
 마찬가지로 $s$에 대한 평균을 구할 때의 수식은 아래와 같이 변하게 됩니다.
 
 
 $$
 \frac{1}{n}\sum^n_{s=1} d^2_{rs} = \frac{1}{n}\sum^n_{s=1}\mathbf{x}_r^T\mathbf{x}_r + \frac{1}{n}\sum^n_{s=1}\mathbf{x}_s^T\mathbf{x}_s - \frac{2}{n}\sum^n_{s=1}\mathbf{x}_r^T\mathbf{x}_s = \mathbf{x}_r^T\mathbf{x}_r + \frac{1}{n}\sum^n_{s=1}\mathbf{x}_s^T\mathbf{x}_s \\
-\color{red} \therefore \mathbf{x}_r^T\mathbf{x}_r = \frac{1}{n}\sum^n_{s=1} d^2_{rs} - \frac{1}{n}\sum^n_{s=1}\mathbf{x}_s^T\mathbf{x}_s
+\color{red}{\therefore \mathbf{x}_r^T\mathbf{x}_r = \frac{1}{n}\sum^n_{s=1} d^2_{rs} - \frac{1}{n}\sum^n_{s=1}\mathbf{x}_s^T\mathbf{x}_s}
 $$
 
 
@@ -102,7 +102,7 @@ $$
 &= \frac{1}{n}\sum^n_{r=1}\mathbf{x}_r^T\mathbf{x}_r
 + \frac{1}{n}\sum^n_{s=1}\mathbf{x}_s^T\mathbf{x}_s = \frac{2}{n}\sum^n_{r=1}\mathbf{x}_r^T\mathbf{x}_r
 \end{aligned} \\
-\color{olive} \therefore \frac{2}{n}\sum^n_{r=1}\mathbf{x}_r^T\mathbf{x}_r = \frac{1}{n^2}\sum^n_{r=1}\sum^n_{s=1} d^2_{rs}
+\color{olive}{\therefore \frac{2}{n}\sum^n_{r=1}\mathbf{x}_r^T\mathbf{x}_r = \frac{1}{n^2}\sum^n_{r=1}\sum^n_{s=1} d^2_{rs}}
 $$
 
 
