--- a/_posts/2020-10-10-tsne.md
+++ b/_posts/2020-10-10-tsne.md
@@ -28,7 +28,7 @@ $$
 
 위 수식에서 $p$는 원 데이터의 차원에서 인스턴스 $i$가 인스턴스 $j$를 이웃으로 선택할 확률이며, $q$는 축소된 차원에서 인스턴스 $i$가 인스턴스 $j$를 이웃으로 선택할 확률입니다. $p,q$ 를 나타내는 수식은 비슷하게 생겼습니다. 우선 거리가 멀어질 수록 낮은 확률값을 할당하기 위해서 $y=e^{-x}$를 사용합니다. 이 함수에서는 $x$가 커질수록 함숫값이 작아지기 때문에 서로의 거리가 먼 인스턴스가 이웃으로 정해질 확률이 작아지게 됩니다. $y=e^{-x}$의 그래프는 아래와 같이 생겼습니다.
 
-<img src="https://user-images.githubusercontent.com/45377884/95573824-0105d200-0a67-11eb-9826-bf581838b2b4.PNG" alt="graph1" style="zoom:50%;" />
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/95573824-0105d200-0a67-11eb-9826-bf581838b2b4.PNG" alt="graph1" style="zoom:50%;" /></p>
 
 하지만 몇 가지 차이점도 가지고 있습니다. 먼저 $p$ 는 원래 인스턴스 좌표 $\mathbf{x}$ 에 대한 함수이며, $q$는 축소된 좌표계에서의 인스턴스의 좌표 $\mathbf{y}$에 대한 함수입니다. 그리고 $p$ 를 구하는 식에는 거리에 따른 확률값 차이를 얼마나 줄 것인지를 조정하는 $\sigma$ 가 있습니다. 이 값이 커지면 멀리 있는 인스턴스의 확률이 상대적으로 커지게 되고, 작게 하면 멀리 있는 인스턴스가 이웃으로 선택될 확률이 작아지게 됩니다. 실제로는 $\sigma$ 값이 $[5,50]$ 범위 중 어떤 값을 같더라도 t-SNE 자체가 실제로 강건(Robust)하게 작동하기 때문에 큰 고민없이 기본(Default)값으로 사용하는 것이 일반적입니다.
 
@@ -60,7 +60,7 @@ C &= \sum_i\sum_j \color{blue}{p_{i\vert j}} \log \frac{\color{blue}{p_{i\vert j
 C^\prime &= - \sum_i\sum_j \color{blue}{p_{i\vert j}} \log \color{red}{q_{i\vert j}} \\
 &= -\sum_i \color{blue}{p_{t\vert i}} \log \color{red}{q_{t\vert i}} - \sum_j \color{blue}{p_{j\vert t}} \log \color{red}{q_{j\vert t}} - \sum_{i \neq t}\sum_{j \neq t} \color{blue}{p_{i\vert j}} \log \color{red}{q_{i\vert j}}
 \end{aligned} \\
-\because \frac{\part C}{\part y_t} = \frac{\part C^\prime}{\part y_t}
+\because \frac{\partial C}{\partial y_t} = \frac{\partial C^\prime}{\partial y_t}
 $$
 
 
@@ -76,7 +76,7 @@ $$
 
 
 $$
-\frac{\part d_{it}}{\part \mathbf{y}_t} = d^\prime_{ti} = -2(\Vert\mathbf{y}_t-\mathbf{y}_i\Vert) \exp(\Vert\mathbf{y}_t-\mathbf{y}_i\Vert^2) = -2(\mathbf{y}_t-\mathbf{y}_i)d_{ti}\\
+\frac{\partial d_{it}}{\partial \mathbf{y}_t} = d^\prime_{ti} = -2(\Vert\mathbf{y}_t-\mathbf{y}_i\Vert) \exp(\Vert\mathbf{y}_t-\mathbf{y}_i\Vert^2) = -2(\mathbf{y}_t-\mathbf{y}_i)d_{ti}\\
 q_{t\vert i} = \frac{\exp(\Vert\mathbf{y}_i-\mathbf{y}_t\Vert^2)}{\sum_{k \neq i} \exp(\Vert\mathbf{y}_i-\mathbf{y}_k\Vert^2)} = \frac{d_{it}}{\sum_{k \neq i}d_{ik}}\\
 q_{j\vert t} = \frac{\exp(\Vert\mathbf{y}_t-\mathbf{y}_j\Vert^2)}{\sum_{k \neq t} \exp(\Vert\mathbf{y}_t-\mathbf{y}_k\Vert^2)} = \frac{d_{tj}}{\sum_{k \neq i}d_{tk}}\\
 q_{i\vert j} = \frac{\exp(\Vert\mathbf{y}_j-\mathbf{y}_i\Vert^2)}{\sum_{k \neq i} \exp(\Vert\mathbf{y}_j-\mathbf{y}_k\Vert^2)} = \frac{d_{ji}}{\sum_{k \neq j}d_{jk}}
@@ -88,8 +88,8 @@ $$
 
 $$
 \begin{aligned}
-\frac{\part}{\part \mathbf{y}_t}\bigg(-\sum_i \color{blue}{p_{t\vert i}} \log \color{red}{q_{t\vert i}}\bigg) 
-&= -\sum_i \color{blue}{p_{t\vert i}}\cdot \frac{1}{\color{red}{q_{t\vert i}}}\cdot \frac{\part \color{red}{q_{t\vert i}}}{\part y_t} \\
+\frac{\partial}{\partial \mathbf{y}_t}\bigg(-\sum_i \color{blue}{p_{t\vert i}} \log \color{red}{q_{t\vert i}}\bigg) 
+&= -\sum_i \color{blue}{p_{t\vert i}}\cdot \frac{1}{\color{red}{q_{t\vert i}}}\cdot \frac{\partial \color{red}{q_{t\vert i}}}{\partial y_t} \\
 &= -\sum_i \color{blue}{p_{t\vert i}}\cdot \frac{1}{\color{red}{q_{t\vert i}}}\cdot \frac{d^\prime_{it}(\sum_{k \neq i}d_{ik}) - d_{it}d^\prime_{it}}{(\sum_{k \neq i}d_{ik})^2} \\
 &= -\sum_i \color{blue}{p_{t\vert i}}\cdot \frac{1}{\color{red}{q_{t\vert i}}}\cdot \frac{-2(\mathbf{y}_t-\mathbf{y}_i)d_{ti}(\sum_{k \neq i}d_{ik}) +2(\mathbf{y}_t-\mathbf{y}_i)d_{ti}^2}{(\sum_{k \neq i}d_{ik})^2}\\
 &= -\sum_i \color{blue}{p_{t\vert i}}\cdot \frac{1}{\color{red}{q_{t\vert i}}}\cdot \bigg(-2(\mathbf{y}_t - \mathbf{y}_i) \cdot q_{t\vert i} + 2(\mathbf{y}_t - \mathbf{y}_i) \cdot q_{t\vert i}^2\bigg)\\
@@ -103,8 +103,8 @@ $$
 
 $$
 \begin{aligned}
-\frac{\part}{\part \mathbf{y}_t}\bigg(-\sum_j \color{blue}{p_{j\vert t}} \log \color{red}{q_{j\vert t}}\bigg) 
-&= -\sum_j \color{blue}{p_{j\vert t}}\cdot \frac{1}{\color{red}{q_{j\vert t}}}\cdot \frac{\part \color{red}{q_{j\vert t}}}{\part y_t} \\
+\frac{\partial}{\partial \mathbf{y}_t}\bigg(-\sum_j \color{blue}{p_{j\vert t}} \log \color{red}{q_{j\vert t}}\bigg) 
+&= -\sum_j \color{blue}{p_{j\vert t}}\cdot \frac{1}{\color{red}{q_{j\vert t}}}\cdot \frac{\partial \color{red}{q_{j\vert t}}}{\partial y_t} \\
 &= -\sum_j \color{blue}{p_{j\vert t}}\cdot \frac{1}{\color{red}{q_{j\vert t}}}\cdot \frac{d^\prime_{tj}(\sum_{k \neq t}d_{tk}) - d_{tj}(\sum_{k \neq t}d^\prime_{tk})}{(\sum_{k \neq t}d_{tk})^2} \\
 &= -\sum_j \color{blue}{p_{j\vert t}}\cdot \frac{1}{\color{red}{q_{j\vert t}}}\cdot \frac{-2(\mathbf{y}_t-\mathbf{y}_j)d_{tj}(\sum_{k \neq t}d_{tk}) - d_{tj}(\sum_{k \neq t}d^\prime_{tk})}{(\sum_{k \neq t}d_{tk})^2}\\
 &= 2\sum_j \color{blue}{p_{j\vert t}} \cdot(\mathbf{y}_t-\mathbf{y}_j) + \sum_j \color{blue}{p_{j\vert t}} \cdot \frac{\sum_{k \neq t}d^\prime_{tk}}{\sum_{k \neq t}d_{tk}} \\
@@ -121,8 +121,8 @@ $$
 
 $$
 \begin{aligned}
-\frac{\part}{\part \mathbf{y}_t}\bigg(-\sum_{i \neq t}\sum_{j \neq t} \color{blue}{p_{i\vert j}} \log \color{red}{q_{o\vert j}}\bigg) 
-&= -\sum_{i \neq t}\sum_{j \neq t} \color{blue}{p_{i\vert j}}\cdot \frac{1}{\color{red}{q_{i\vert j}}}\cdot \frac{\part \color{red}{q_{i\vert j}}}{\part y_t} \\
+\frac{\partial}{\partial \mathbf{y}_t}\bigg(-\sum_{i \neq t}\sum_{j \neq t} \color{blue}{p_{i\vert j}} \log \color{red}{q_{o\vert j}}\bigg) 
+&= -\sum_{i \neq t}\sum_{j \neq t} \color{blue}{p_{i\vert j}}\cdot \frac{1}{\color{red}{q_{i\vert j}}}\cdot \frac{\partial \color{red}{q_{i\vert j}}}{\partial y_t} \\
 &= -\sum_{i \neq t}\sum_{j \neq t} \color{blue}{p_{i\vert j}}\cdot \frac{1}{\color{red}{q_{i\vert j}}}\cdot \frac{d^\prime_{ji}(\sum_{k \neq j}d_{jk}) - d_{ji}d^\prime_{jt}}{(\sum_{k \neq j}d_{ji})^2} \\
 &= -\sum_{i \neq t}\sum_{j \neq t} \color{blue}{p_{i\vert j}}\cdot \frac{1}{\color{red}{q_{i\vert j}}}\cdot \frac{2(\mathbf{y}_t-\mathbf{y}_i)d_{ji}d_{jt}}{(\sum_{k \neq j}d_{jk})^2}\\
 &= -\sum_{i \neq t}\sum_{j \neq t} \color{blue}{p_{i\vert j}}\cdot \frac{1}{\color{red}{q_{i\vert j}}}\cdot 2(\mathbf{y}_t - \mathbf{y}_i) \cdot q_{i\vert j}\cdot q_{t\vert j}\\
@@ -157,7 +157,7 @@ $$
 $$
 
 
-이렇게 구해진 최종 식이 $\part C/\part \mathbf{y}_t$ 가 됩니다. 이 식을 사용하여 경사 하강법을 적용하여 최솟값이 되는 지점을 추적해나가는 것이 SNE의 값이 되겠습니다.
+이렇게 구해진 최종 식이 $\partial C/\partial \mathbf{y}_t$ 가 됩니다. 이 식을 사용하여 경사 하강법을 적용하여 최솟값이 되는 지점을 추적해나가는 것이 SNE의 값이 되겠습니다.
 
 
 
@@ -176,7 +176,7 @@ $$
 
 $$
 C = \sum_i KL(\color{blue}{P_i}\Vert \color{red}{Q_i}) = \sum_i\sum_j \color{blue}{p_{ij}} \log \frac{\color{blue}{p_{ij}}}{\color{red}{q_{ij}}} \\
-\because \frac{\part C}{\part y_i} = 4\sum_j  (\mathbf{y}_t - \mathbf{y}_j) \cdot (\color{blue}{p_{ij}} - \color{red}{q_{ij}})
+\because \frac{\partial C}{\partial y_i} = 4\sum_j  (\mathbf{y}_t - \mathbf{y}_j) \cdot (\color{blue}{p_{ij}} - \color{red}{q_{ij}})
 $$
 
 
@@ -186,9 +186,9 @@ $$
 
 
 
-![gd](https://user-images.githubusercontent.com/45377884/95606367-32959200-0a95-11eb-8c05-6b992e9ce96a.png)
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/95606367-32959200-0a95-11eb-8c05-6b992e9ce96a.png" alt="gd"  /></p>
 
-
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://wiki.analytica.com/index.php?title=Normal_distribution">wiki.analytica.com</a></p>
 
 위 그래프에서 빨간색으로 색칠된 부분, 즉 중심에서 가까운 부분보다 파란색으로 색칠된 부분에서 급격히 경사가 감소하는 것을 볼 수 있습니다. 이를 보정하기 위해서 t-SNE에서는 꼬리가 더 두꺼운 **스튜던트 t-분포(Student's t-distribution)**를 사용합니다. 이 때 t-분포의 자유도는 1로 정합니다. t-분포의 식을 수식으로 나타내면 아래와 같습니다.
 
