--- a/_posts/2020-10-23-mgf.md
+++ b/_posts/2020-10-23-mgf.md
@@ -19,7 +19,7 @@ tag: Statistics
 
 ## Moment
 
-모멘트란 물리학에서도 사용되는 개념입니다. 물리학에서는 질량을 0차 모멘트로 나타내고, 질량 중심은 1차 모멘트를 사용하여 나타내며, 관성 모멘트를 나타낼 때에는 2차 모멘트를 사용합니다. 마찬가지로 통계학에서는 **평균(Mean)**을 나타낼 때 1차 모멘트를 사용하고, **분산(Variance)**을 나타낼 때에는 2차 모멘트를 사용합니다. **왜도(Skewness)**를 나타낼 때에는 3차 모멘트를 도입하여 사용하게 되며 마지막으로 **첨도(Kurtosis)**를 나타낼 때에는 4차 모멘트를 사용합니다. 각 차수의 모멘트를 결합하여 나타낼 수 있는 4개의 수치는 확률 밀도 함수(Probability Density Function, pdf)의 모양을 결정하는 역할을 합니다. 이에 대해서는 아래에서 다시 살펴보겠습니다.
+모멘트란 물리학에서도 사용되는 개념입니다. 물리학에서는 질량을 0차 모멘트로 나타내고, 질량 중심은 1차 모멘트를 사용하여 나타내며, 관성 모멘트를 나타낼 때에는 2차 모멘트를 사용합니다. 마찬가지로 통계학에서는 **평균(Mean)**을 나타낼 때 1차 모멘트를 사용하고, **분산(Variance)**을 나타낼 때에는 2차 모멘트를 사용합니다. **왜도(Skewness)**를 나타낼 때에는 3차 모멘트를 도입하여 사용하게 되며 마지막으로 **첨도(Kurtosis)**를 나타낼 때에는 4차 모멘트를 사용합니다. 각 차수의 모멘트를 결합하여 나타낼 수 있는 4개의 수치는 확률 밀도 함수(Probability Density Function, pdf)의 모양을 결정하는 역할을 합니다. 이에 대해서는 다음에 다시 살펴보겠습니다.
 
 통계학에서 $k$차 모멘트를 수식으로 나타내면 $E(X^k)$ 가 됩니다.
 
