--- a/_posts/2020-06-25-dl_rnn.md
+++ b/_posts/2020-06-25-dl_rnn.md
@@ -13,7 +13,9 @@ tag: Deep-Learning
 
 # RNN (Recurrent Neural Network)
 
-일반적인 뉴럴 네트워크는 아래 그림의 맨 왼쪽에 위치한 도식처럼 하나의 입력층(Input layer)과 하나의 은닉층(Hidden-layer)과 하나의 출력층(Output-layer)으로 이루어져 있다. 하지만 우리가 맞닥뜨리는 데이터들은 각기 따로 있지만은 않는다. 언어나 영상과 같은 데이터는 시퀀스(Sequence)의 형태로 구성되어 있기 때문이다. 아래 그림에서 맨 왼쪽을 제외한 그림은 입력 혹은 출력 데이터가 시퀀스로 이루어진 경우를 나타낸다.
+우리에게 주어지는 몇 가지 데이터는 시퀀스(Sequence)의 형태로 구성되어 있습니다. 예를 들면, *"I am a student"* 라는 
+
+일반적인 뉴럴 네트워크는 아래 그림의 맨 왼쪽에 위치한 도식처럼 하나의 입력층(Input layer)과 하나의 은닉층(Hidden-layer)과 하나의 출력층(Output-layer)으로 이루어져 있다.  아래 그림에서 맨 왼쪽을 제외한 그림은 입력 혹은 출력 데이터가 시퀀스로 이루어진 경우를 나타낸다.
 
 <p align="center"><img src="https://user-images.githubusercontent.com/45377884/85701189-18b78580-b718-11ea-93c5-b63aa5b64186.png" alt="rnn1" style="zoom:67%;" /></p>
 
