--- a/_posts/2020-06-20-nlp_lda.md
+++ b/_posts/2020-06-20-nlp_lda.md
@@ -153,9 +153,7 @@ $\alpha$가 달라지면서 디리클레 분포가 어떤 형태를 나타내는
 
 ## Gibbs Sampling
 
-잠재 디리클레 할당의 
-
-문서 내 단어 ( $\mathbf{w}$ ) 가 주어졌을 때의 잠재 변수( $\phi, \theta, \mathbf{z}$ )의 사후 확률을 구하는 수식은 다음과 같다.
+잠재 디리클레 할당에서 문서 내 단어 $\mathbf{w}$가 주어졌을 때, 잠재 변수의 확률을 구하는 수식은 다음과 같습니다.
 
 
 $$
@@ -163,32 +161,43 @@ p(\phi, \theta, \mathbf{z} | \mathbf{w}) = \frac{p(\phi, \theta, \mathbf{z} ,\ma
 $$
 
 
-여기서 분모에 해당하는 부분을 정확한 값으로 계산하는 것이 불가능하다. 때문에 우리는 여러가지 근사 알고리즘을 통해서 그 값을 찾아나가야 한다. 이러한 근사 알고리즘 중 **Gibbs Sampling** 이라는 방법을 사용하도록 하자.
+여기서 분모에 해당하는 $\int_\phi \int_\theta \sum_\mathbf{z} p(\phi, \theta, \mathbf{z} ,\mathbf{w})$의 해를 직접 구하는 것은 불가능합니다. 그렇기 때문에 이 값을 찾기 위하여 근사 알고리즘 중 하나인 깁스 샘플링(Gibbs Sampling)을 사용합니다. 깁스 샘플링은 결합 확률 분포를 근사하기 위한 알고리즘으로 몬테카를로 마르코프 체인(Markov Chain Monte Carlo, MCMC) 방법을 사용하는 알고리즘 중 하나입니다.
 
-Gibbs Sampling은 결합확률 분포를 근사하기 위한 알고리즘으로 마르코프 체인 몬테카를로(Markov Chain Monte Carlo, MCMC)의 알고리즘 중 하나다. Gibbs Sampling이 동작하는 방식은 다음과 같다.[^1] $\{z_1, \cdots, z_N\}$ 라는 확률 변수를 알고 있다는 상태에서 $z_k$ 만 마스킹한 상태로 나머지 값 $\mathbf{z}_{-k}$ 를 이용하여 $z_k$ 의 값을 찾는다. 그리고 이 과정을 지속적으로 반복한다. 표본의 앞 부분은 초기 상태에 좌지우지되는 경향이 있지만 반복 횟수가 늘어날수록 확률 분포 $p$ 에 기반한 표본을 수집할 수 있다.
+깁스 샘플링이 동작하는 방식은 다음과 같습니다. 먼저 $\{z_1, \cdots, z_N\}$ 라는 확률 변수를 알고 있다는 상태에서 $z_k$만 마스킹한 상태로 나머지 값 $\mathbf{z}_{-k}$를 이용하여 $z_k$의 값을 찾아나갑니다. 그리고 $k$ 를 바꿔가면서 이 과정을 지속적으로 반복합니다. 반복 횟수가 적을 때에는 초깃값의 영향을 많이 받게 되지만 반복 횟수가 늘어날수로 확률 분포 $p$에 기반한 표본을 수집할 수 있게 됩니다.
 
-Gibbs Sampling에는 여러가지 변형된 형태가 있다. 3개의 변수 $a,b,c$ 만 존재하는 경우를 생각해보자. 가장 일반적인 Gibbs Sampling은 나머지 변수를 고정하고 하나의 변수를 계속 변경해나가는 방식이다. $b,c$ 를 고정한 채 $a$ 를 변경하고, $c,a$를 고정한 채 $a$ 를 변경하고, $a,b$ 를 고정한 채 $c$ 를 변경하는 과정을 계속 반복해나간다. Block Gibbs Sampling은 변수를 하나로 묶는다. $a,b$ 를 하나로 묶는 경우를 생각해보자. 먼저 $c$ 를 고정한 채 $a,b$ 를 변화시킨 후에 $a,b$ 를 고정시킨 채로 $c$ 를 변경시키는 과정을 지속적으로 반복하게 된다. 마지막은 잠재 디리클레 할당에서 사용하는 **Collapsed Gibbs Sampling** 이다. 이 방법에서는 일부 변수를 무시한다. 예를 들어, 3개의 변수 중 2개 $(a,c)$ 만을 선택한 뒤에 $a$ 를 고정한 채 $c$ 를 변경, $c$ 를 고정한 채 $a$ 를 변경하는 과정을 반복한다. 배제된 변수 $b$ 는 샘플링 과정에서 collapsed out 된다.
+깁스 샘플링에는 여러가지 변형된 형태가 있습니다. 3개의 변수 $a,b,c$만 존재하는 경우를 생각해보겠습니다. 가장 일반적인 깁스 샘플링은 나머지 변수를 고정하고 하나의 변수를 계속 변경해나가는 방식입니다. $b,c$ 를 고정한 채 $a$ 를 변경하고, $c,a$를 고정한 채 $a$ 를 변경하고, $a,b$ 를 고정한 채 $c$ 를 변경하는 과정을 계속 반복해나갑니다.
 
-이렇게 Collapsed Gibbs Sampling을 사용하면 변수의 개수를 줄일 수 있다. 우리는 문서에 존재하는 단어가 어떤 것인지, 그리고 마스킹된 단어를 제외하고는 단어가 어떤 주제에 속하는 지를 알고 있다. 때문에 마스킹한 단어가 어떤 주제에 속하는지에 대한 확률은 아래와 같이 나타낼 수 있다. 이 샘플링 과정에서는 각 단어가 어느 토픽에 속하는 지만을 샘플링하므로 나머지 변수 $\theta, \phi$ 는 무시된다.
+두 번째는 블록 깁스 샘플링(Block Gibbs Sampling)이라는 방법입니다. 이 방법에서는 수 개의 변수를 묶은 후에 깁스 샘플링을 수행합니다. 이전과 같은 3개의 변수 $a,b,c$ 중 $a,b$ 를 하나로 묶는 경우를 생각해보겠습니다. 이렇게 되면 $c$를 고정하고 $a,b$ 를 변화시킬 수 있습니다. 다음으로 $a,b$ 를 고정한 후에 $c$ 를 변경하는 과정을 지속적으로 반복하게 됩니다.
+
+마지막 방법이 잠재 디리클레 할당에서 사용하는 Collapsed Gibbs Sampling 입니다. 이 방법에서는 일부 변수를 무시합니다. 이전과 같이 3개의 변수가 있다면, 그 중 하나를 배제하고 2개의 변수를 선택합니다. 만약 선택된 변수가 $a,c$ 뿐이라면 $a$ 를 고정한 채 $c$ 를 변경, $c$ 를 고정한 채 $a$ 를 변경하는 과정을 반복하게 됩니다. 이전 과정에서 배제된 변수인 $b$ 는 샘플링 과정에서 사라지게(Collapsed out) 됩니다. 잠재 디리클레 할당에서 이 방법을 사용하는 이유는 이 방법이 변수의 개수를 줄일 수 있기 때문입니다. 
+
+대상 단어인 $w_k$ 가 어떤 것인지 알고 있으며, 마스킹된 단어를 제외한 단어인 $\mathbf{w}_{-k}$ 가 각각 어떤 주제에 속하는 지를 알고 있습니다. 이를 알고 있기 때문에 마스킹한 단어가 어떤 주제에 속하는 지에 대한 확률을 아래와 같이 나타낼 수 있습니다. 샘플링 과정에서는 각 단어가 어느 토픽에 속하는 지에 대해서만 추출하기 때문에 나머지 변수인 $\theta, \phi$ 는 무시됩니다.
 
 
 $$
 p(z_i=j|\mathbf{z}_{-i}, \mathbf{w})
 $$
+ 
+
+이 확률은 조건부 확률의 정의에 의해서 각 사건의 결합 확률에 비례하게 되며 등장하는 결합 확률의 식을 조금 변형시키면 아래와 같은 식으로 나타낼 수 있습니다.
 
 
-이 확률은 조건부 확률의 정의에 의해서 각 사건의 결합 확률에 비례하게 되며 결합 확률의 식을 조금 변형시킬 수 있다.
+
 
 
 $$
-p(z_i=j|\mathbf{z}_{-i}, \mathbf{w}) \propto p(z_i=j, \mathbf{z}_{-i}, \mathbf{w}) \qquad \qquad \qquad \qquad \qquad \qquad \\
-\qquad \qquad \quad= p(w_i|z_i=j, \mathbf{z}_{-i}, \mathbf{w}_{-i}) p(z_i=j|\mathbf{z}_{-i}, \mathbf{w}_{-i}) \\
-\qquad \quad \qquad \qquad \qquad = p(w_i|z_i=j, \mathbf{z}_{-i}, \mathbf{w}_{-i}) p(z_i=j|\mathbf{z}_{-i}) \qquad \cdots \text{ Eq. 1}
+\begin{aligned}
+p(z_i=j|\mathbf{z}_{-i}, \mathbf{w}) &\propto p(z_i=j, \mathbf{z}_{-i}, \mathbf{w})\\
+&= p(w_i|z_i=j, \mathbf{z}_{-i}, \mathbf{w}_{-i}) p(z_i=j|\mathbf{z}_{-i}, \mathbf{w}_{-i}) \\
+&= p(w_i|z_i=j, \mathbf{z}_{-i}, \mathbf{w}_{-i}) p(z_i=j|\mathbf{z}_{-i}) \qquad \cdots \text{ Eq. 1}
+\end{aligned}
 $$
 
+
+
+마지막에 등장하는 방정식 $\text{ Eq. 1}$ 우변의 두 항 중 앞에 위치한 항을 다음과 같이 인수분해(Factorization)하여 다음과 같이 나타낼 수 있습니다. 이렇게 등장한 적분식에서 
 
 Eq. 1 식에서 앞부분은 Factorization하여 다음과 같이 다시 쓸 수 있다. 아래 적분으로 나타내어진 식에서 확률로 나타내어진 첫 번째 항은 이산적인 것으로 계산이 가능하며 두 번째 항은 디리클레 분포로 $\beta$ 를 활용하여 나타낼 수 있다.
-
 
 $$
 p(w_i|z_i=j, \mathbf{z}_{-i}, \mathbf{w}_{-i}) = \int p(w_i|z_i=j, \phi^j)p(\phi^j|\mathbf{z}_{-i}, \mathbf{w}_{-i})d\phi^j \\ \qquad \qquad
