create_beta_mod_title_gamma

--- a/_posts/2020-12-3-gamma.md
+++ b/_posts/2020-12-3-gamma.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 감마 분포(Gamma Distribution)
+title: 감마 분포(Gamma Distribution)와 카이 제곱 분포(Chi-squared Distribution)
 category: Statistics
 tag: Statistics
 ---
@@ -9,7 +9,7 @@ tag: Statistics
 
 이 게시물은 [부산대학교 김충락 교수님의 수리통계학 강의](http://kocw.net/home/search/kemView.do?kemId=1363783)를 참고하여 작성하였습니다.
 
-# Gamma Distribution
+# Gamma & Chi-squared Distribution
 
 이번에는 연속 확률 변수의 특수한 분포인 **감마 분포(Gamma distribution)**에 대해서 알아보겠습니다.
 
