--- a/_posts/2020-03-23-CNN.md
+++ b/_posts/2020-03-23-CNN.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 합성곱 신경망 (Convolutional Neural Network, CNN)
+title: 합성곱 신경망(Convolutional Neural Network, CNN)
 category: Deep Learning
 tag: Deep-Learning
 ---
@@ -89,13 +89,13 @@ $$
 
 대표적인 합성곱 신경망 모델 중 하나인 알렉스넷(Alexnet)의 경우 1번째 합성곱 층에서는 엣지(Edge)나 블롭(Blob)등을 학습하고 3번째 층은 텍스쳐(Texture)를 학습합니다. 5번째 층에 다다르면 사물의 일부를 학습한다는 것으로 알려져 있습니다. 아래는 임의의 합성곱 신경망 내부에 있는 합성곱 층에서 학습하는 패턴을 시각화한 것입니다.
 
-<p align="center"><img src="https://deeplizard.com/images/stitched_filters_block1_conv1.png" alt="1stLayer" style="zoom:67%;" /></p>
+<p align="center"><img src="https://deeplizard.com/images/stitched_filters_block1_conv1.jpg" alt="1stLayer" style="zoom:67%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://deeplizard.com/learn/video/cNBBNAxC8l4">deeplizard.com</a></p>
 
 위 이미지는 입력 데이터와 가장 가까운 층으로 세로, 가로, 대각선 등의 엣지(Edge)를 학습하는 것을 알 수 있습니다. 
 
-<p align="center"><img src="https://deeplizard.com/images/stitched_filters_block5_conv2.png" alt="LastLayer" style="zoom:67%;" /></p>
+<p align="center"><img src="https://deeplizard.com/images/stitched_filters_block5_conv2.jpg" alt="LastLayer" style="zoom:67%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://deeplizard.com/learn/video/cNBBNAxC8l4">deeplizard.com</a></p>
 
