--- a/_posts/2020-11-16-multivar.md
+++ b/_posts/2020-11-16-multivar.md
@@ -170,7 +170,7 @@ F_{Y_1}(y_1) = \begin{align} \begin{cases} 0 &y_1 <0 \\ \\ y_1^2/2 &0 \leq y_1 <
 $$
 
 
-앞에서 알아본 바에 따라 $\frac{\part F_{Y_1}(y_1)}{\part y_1} = f_{Y_1}(y_1)$ 이므로 각 범위마다 식을 적용하여 확률 밀도 함수를 구할 수 있습니다.
+앞에서 알아본 바에 따라 $\frac{\partial F_{Y_1}(y_1)}{\partial y_1} = f_{Y_1}(y_1)$ 이므로 각 범위마다 식을 적용하여 확률 밀도 함수를 구할 수 있습니다.
 
 
 $$
@@ -193,7 +193,7 @@ $$
 
 
 $$
-\vert J \vert = \left\vert\begin{array}{cc} \frac{\part x_1}{\part y_1} & \frac{\part x_2}{\part y_2} \\ \frac{\part x_2}{\part y_1} & \frac{\part x_2}{\part y_2} \end{array} \right\vert = \left\vert\begin{array}{cc} 1 & -1 \\ 0 & 1 \end{array} \right\vert
+\vert J \vert = \left\vert\begin{array}{cc} \frac{\partial x_1}{\partial y_1} & \frac{\partial x_2}{\partial y_2} \\ \frac{\part x_2}{\part y_1} & \frac{\part x_2}{\part y_2} \end{array} \right\vert = \left\vert\begin{array}{cc} 1 & -1 \\ 0 & 1 \end{array} \right\vert
 $$
 
 
