--- a/_posts/2020-06-25-dl_rnn.md
+++ b/_posts/2020-06-25-dl_rnn.md
@@ -13,67 +13,105 @@ tag: Deep-Learning
 
 # RNN (Recurrent Neural Network)
 
-우리에게 주어지는 몇 가지 데이터는 시퀀스(Sequence)의 형태로 구성되어 있습니다. 예를 들면, *"I am a student"* 라는 
+이번 시간에는 시퀀스를 다루기 위한 신경망인 순환 신경망(Recurrent Neural Network, RNN)에 대해 알아보도록 하겠습니다.
 
-일반적인 뉴럴 네트워크는 아래 그림의 맨 왼쪽에 위치한 도식처럼 하나의 입력층(Input layer)과 하나의 은닉층(Hidden-layer)과 하나의 출력층(Output-layer)으로 이루어져 있다.  아래 그림에서 맨 왼쪽을 제외한 그림은 입력 혹은 출력 데이터가 시퀀스로 이루어진 경우를 나타낸다.
+## Sequential Data
 
-<p align="center"><img src="https://user-images.githubusercontent.com/45377884/85701189-18b78580-b718-11ea-93c5-b63aa5b64186.png" alt="rnn1" style="zoom:67%;" /></p>
+우리가 실제로 맞닥뜨리는 데이터는 여러 형태를 가지고 있습니다. 그 중 하나가 바로 아래와 같은 이미지 데이터입니다. 합성곱 신경망은 이와 같은 데이터를 잘 다루지요. 
 
-<p align="center" style="font-size:80%">이미지 출처 : <a href="http://cs231n.stanford.edu/syllabus.html">cs231n 강의자료</a></p>
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/108649954-bb234500-7501-11eb-974e-a27ad464285c.png" alt="non_sequential" style="zoom:50%;" /></p>
 
-두 번째처럼 하나의 데이터가 입력되고 시퀀스 데이터가 출력되는 Task에는 Image Captioning이 있다. 입력 데이터는 그림 한 장이지만 그로부터 한 단어 이상으로 된 문장(Sequence)이 출력된다. 가운데처럼 시퀀스 데이터를 입력하여 하나의 데이터를 출력하는 Task에는 감성 분석(Sentiment Analysis)가 있다. 한 문장 혹은 여러 문장으로 이루어진 자연어 시퀀스로부터 이 문장이 긍정인지, 부정인지 (혹은 중립인지)를 판단하게 된다. 네 번째와 같은 형태로 입, 출력이 모두 시퀀스인 Task는 기계 번역(Machine Translation)이 있다. 특정 언어의 시퀀스를 입력받아 다른 언어의 시퀀스를 출력한다. 마지막과 같은 형태의 신경망에는 프레임 레벨에서 진행되는 영상 분류(Video classification on frame level)가 있다.
+위와 같은 데이터는 데이터가 등장하는 순서가 바뀌더라도 데이터의 의미가 달라지지 않습니다. 어떤 고양이 사진을 처리하기 전에 강아지 사진이 등장하든, 고양이 사진이 등장하든, 아무 상관없는 빌딩 사진이 등장하든 원래 데이터가 고양이 사진이라는 것은 달라지지 않지요. 이런 데이터와는 달리 등장 순서에 따라 의미가 달라지는 데이터가 있습니다. 아래와 같은 자연어와 시계열 데이터가 대표적인 사례입니다.
 
-이런 시퀀스 데이터를 다루기 위해서 사용되는 것이 RNN(Recurrent Neural Network)이다. Recurrent는 '주기적으로 일어난다', '순환한다'는 뜻으로 RNN을 '순환 신경망'으로 번역하여 쓰기도 한다.
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/108650289-911e5280-7502-11eb-91aa-3c68bdffb86e.png" alt="sequential" style="zoom:50%;" /></p>
 
-## RNN의 구조
+자연어와 시계열 데이터는 앞,뒤로 어떤 데이터가 등장하는 지에 따라서 특정 데이터의 의미가 달라집니다. 좀 더 간단한 아래의 예시를 보겠습니다.
 
-NN에 왜 R을 붙였는지에 대한 이유는 아래 그림에 나타나 있는 RNN의 기본 구조를 통해서 알 수 있다.
+> *"The stolen car sped into the arena."* : **도난 차량이 경기장 안으로 돌진했다.**
+>
+> *"The clown car sped into the arena."* : **광대 차가 공연장 안으로 들어왔다.**
+
+두 문장은 *"stolen"* 이 *"clown"* 으로 바뀐 것 외에는 아무런 바뀐 것이 없습니다. 하지만 문장의 의미는 완전히 달라졌네요. 바뀐 단어 이후에 있는 *"sped into", "arena"* 의 의미까지 바뀌어버렸습니다. 이렇게 앞,뒤에 어떤 단어가 오느냐에 따라서 뒤따라오는 데이터의 의미도 변화하는 데이터를 **연속형(Sequential) 데이터**라고 합니다. 대표적인 연속형 데이터가 바로 위에서 설명한 자연어와 시계열 데이터입니다.
+
+
+
+## RNN
+
+연속형 데이터는 데이터가 등장하는 순서가 중요하기 때문에 이 순서를 체크할 수 있는 신경망을 사용해주어야 합니다. 순환 신경망은 이런 데이터를 학습하기 위해 등장한 신경망입니다. 먼저 순환 신경망의 구조를 살펴보도록 하겠습니다.
 
  <p align="center"><img src="https://user-images.githubusercontent.com/45377884/85712025-d9dafd00-b722-11ea-96a4-4c393d34c24f.png" alt="rnn2" style="zoom:50%;" /></p>
 
-<p align="center" style="font-size:80%">이미지 출처 : <a href="http://cs231n.stanford.edu/syllabus.html">cs231n 강의자료</a></p>
+<p align="center" style="font-size:80%">이미지 출처 : <a href="http://cs231n.stanford.edu/syllabus.html">cs231n.stanford.edu</a></p>
 
-위 그림에서 나타난 RNN의 기본 구조는 일반적인 신경망 구조와는 다르게 은닉층에서 뻗어나가 다시 은닉층으로 돌아오는 하나의 흐름을 더 가지고 있다. 이 순환 구조를 펼치면 다음과 같은 그림으로 나타나게 된다. 
+가장 단순한 순환 신경망은 은닉층이 1개인 구조를 가지고 있습니다. 하지만 단층 퍼셉트론 신경망과는 다릅니다. 단층 퍼셉트론 레이어는 은닉층의 벡터를 출력층으로 넘겨주고 끝내지만 순환 신겸망은 은닉층의 벡터를 다음 Time-step에 다시 사용합니다. 이전에 생성된 은닉층 벡터를 재활용(?) 하기 때문에 순환(Recurrent) 신경망이라는 이름이 붙었습니다. Time-step 에 따라서 순환 신경망이 어떻게 동작하는 지를 펼쳐보면 아래와 같습니다.
 
-<p align="center"><img src="https://user-images.githubusercontent.com/45377884/85719759-b0be6a80-b72a-11ea-87f5-32f9dad18656.png" alt="rnn3" style="zoom:67%;" /></p>
 
-<p align="center" style="font-size:80%">이미지 출처 : <a href="http://cs231n.stanford.edu/syllabus.html">cs231n 강의자료</a></p>
 
-RNN과 이전에 살펴본 신경망의 가장 큰 차이점은 계층이 없다는 것이다. RNN의 각 계층은 해당 계층으로의 입력 $x_t$와 이전 RNN계층이 내놓는 출력을 동시에 입력받는다. 이를 바탕으로 해당 층에서의 출력값을 계산하게 되며 출력값을 내보냄과 동시에 다음 RNN계층에 전달하게 된다. 이것을 수식으로 나타내면 다음과 같다.
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/85719977-ee22f800-b72a-11ea-91fe-3208b5ae4127.png" alt="rnn4" style="zoom:50%;" /></p>
+
+<p align="center" style="font-size:80%">이미지 출처 : <a href="http://cs231n.stanford.edu/syllabus.html">cs231n.stanford.edu</a></p>
+
+첫 번째 Time-step, $t=0$ 에는 입력 벡터 $\mathbf{x}_1$ 와 초기화 되어있는 은닉층의 상태(Hidden-state) 벡터 $\mathbf{h}_0$ 가 은닉층에 입력됩니다. 은닉층은 두 개의 벡터를 입력받아 새로운 Hidden-state 벡터 $\mathbf{h}_1$ 을 만들어내고 벡터 $\mathbf{y}_1$ 을 출력합니다. 다음 Time-step인 $t=1$ 에는 $t=0$ 에서 생성했던 $\mathbf{h}_1$ 을 다시 활용합니다. 이 $\mathbf{h}_1$ 과 해당 순서의 입력 벡터인 $\mathbf{x}_2$ 가 은닉층에 입력되지요. 순환 신경망은 이 과정을 문장 끝까지 반복합니다. 만약 $n$ 개로 이루어진 시퀀스라면 마지막 Time-step에서는 은닉입력 벡터 $\mathbf{x}_n$ 와 이전 Time-step에서 생성된 Hidden-state 벡터 $\mathbf{h}_{n-1}$ 이 은닉층으로 입력됩니다. 은닉층은 이 둘을 받아 $\mathbf{y}_n$ 를 출력한 후 생성을 마치고 모든 출력에 대한 손실을 계산합니다.
+
+Time-step $t$ 에서 순환 신경망이 은닉 상태 벡터 $\mathbf{h}_t$ 가 생성되는 과정을 수식으로 나타내면 아래와 같습니다.
 
 
 $$
-h_t = f_W (h_{t-1}, x_t)\\
-h_t= \tanh (h_{t-1}W_h + x_tW_x+b)
+\begin{aligned}
+\mathbf{h}_t &= f_W(\mathbf{h}_{t-1}, \mathbf{x}_t)\\
+&= \tanh(\mathbf{h}_{t-1}W_\mathbf{h} + \mathbf{x}_tW_\mathbf{x} + b)
+\end{aligned}
 $$
 
-
-위 식에서 $x, h$ 는 각각 입, 출력 벡터이며 $W$ 는 이 벡터에 곱해지는 가중치이다. $b$ 는 편향을 나타내는 벡터이며 이 값들에 활성화 함수인 $\tanh$ 를 취해주어 새로운 은닉 상태 벡터인 $h$를 구하게 된다. 
-
-<p align="center"><img src="https://user-images.githubusercontent.com/45377884/85719977-ee22f800-b72a-11ea-91fe-3208b5ae4127.png" alt="rnn4" style="zoom:67%;" /></p>
-
-<p align="center" style="font-size:80%">이미지 출처 : <a href="http://cs231n.stanford.edu/syllabus.html">cs231n 강의자료</a></p>
+위 식에서 $\mathbf{x}_t$ 은 해당 Time-step에서 입력되는 벡터이고, $\mathbf{h}_{t-1}$ 은 이전 Time-step 에서 생성된 은닉 상태 벡터입니다. $b$ 는 편향 벡터입니다. 순환 신경망은 활성화 함수로 하이퍼탄젠트 함수 $\tanh$ 를 사용합니다. 은닉층에는 Hidden-state 벡터에 곱해지는 가중치 $W_\mathbf{h}$ 와 입력 벡터에 곱해지는 가중치 $W_\mathbf{x}$ 가 있으며 이 가중치는 역전파로 갱신되기 전까지 모든 Time-step에 동일한 값이 적용됩니다. (순환 신경망의 활성화 함수로 하이퍼탄젠트 함수를 사용하는 이유는 [이곳](https://www.facebook.com/groups/TensorFlowKR/permalink/478174102523653/)을 참고하시면 좋습니다.)
 
 ## BPTT(BackPropagation Through Time)
 
-아래는 이렇게 형성된 RNN에 역전파 흐름을 흘려줌으로서 가중치가 학습되는 과정을 그림으로 나타낸 것이다.
+순환 신경망의 순전파를 알아보았으니 이제 역전파가 어떻게 일어나는지 알아보도록 하겠습니다.
 
-<p align="center"><img src="https://user-images.githubusercontent.com/45377884/85720049-02ff8b80-b72b-11ea-8cda-324e82d1ba80.png" alt="rnn5" style="zoom:67%;" /></p>
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/85720049-02ff8b80-b72b-11ea-8cda-324e82d1ba80.png" alt="rnn5" style="zoom:40%;" /></p>
 
-<p align="center" style="font-size:80%">이미지 출처 : <a href="http://cs231n.stanford.edu/syllabus.html">cs231n 강의자료</a></p>
+<p align="center" style="font-size:80%">이미지 출처 : <a href="http://cs231n.stanford.edu/syllabus.html">cs231n.stanford.edu</a></p>
 
-이는 (시간 방향으로) 펼쳐진 신경망에 대해 진행되는 오차역전파법이기 때문에 **BPTT(Backpropagation Through Time)** 이라고 불린다. 하지만 RNN의 크기가 커질수록 역전파 과정에서 필요로하는 컴퓨팅 자원이 기하급수적으로 늘어나기 때문에 이를 적당히 잘라줄(Truncated) 필요가 있다. 커다란 RNN을 여러 개의 작은 RNN으로 자른 뒤 각각의 작은 신경망에서 오차역전파법을 수행한다. 이를 Truncated BPTT라고 하며 아래와 같은 그림으로 나타낼 수 있다.
-
-<p align="center"><img src="https://user-images.githubusercontent.com/45377884/85720128-1a3e7900-b72b-11ea-90b9-3f34d2712b26.png" alt="rnn6" style="zoom:67%;" /></p>
-
-<p align="center" style="font-size:80%">이미지 출처 : <a href="http://cs231n.stanford.edu/syllabus.html">cs231n 강의자료</a></p>
-
-Truncated BPTT에서 중요한 점은 역전파의 흐름만 끊되 순전파의 흐름은 끊지 않는 것이다. 시퀀스 데이터의 연속성(Sequential)을 유지해야 하기 때문이다. 예를 들어, 30개의 RNN계층으로 이루어진 신경망을 10계층씩 3개(0~9, 10~19, 20~29)로 잘라 학습시키는 경우를 생각해보자. 이때 역전파는 토막과 토막 사이를 넘나들지 못하지만 순전파는 그대로 이어나갈 수 있어야 한다. 따라서 2번째 토막의 맨 처음에 입력되는 $h$ 는 이전 토막의 맨 마지막 계층에서 출력된 은닉 상태 벡터 $h_9$ 여야 한다.
+순환 신경망의 역전파는 Time-step마다 생성된 순전파의 역순으로 진행됩니다. Time-step의 역방향을 따라 진행되기 때문에 **BPTT(Backpropagation Through Time)** 이라고 불립니다.
 
 
 
-## RNN의 문제점
+## Advantage & Problems
 
-RNN은 여러가지 문제점을 가지고 있다. 그 중 하나가 장기 의존성(Long-Term Dependency)에 대한 문제이다. 다음의 예로 장기 의존성에 대해 알아보자. 
+### Advantage
 
-*"Tom was watching TV in his room. Mary came into the room. Mary said hi to (    ?    )."* 이 문장의 빈칸에 들어가야할 단어는 *Tom* 이다. 신경망이 빈칸에 정확히 *Tom*이라는 단어를 집어넣기 위해서는 앞에 나온 문장의 의미를 모두 기억하고 있어야 한다. 하지만 역전파 과정에서 앞에 나온 단어의 기울기는 신경망이 길어질수록 점점 소실되기 때문에 이를 신경망이 간직하지 못하게 된다. 이렇게 기울기가 점점 사라지는 과정을 기울기 소실(Gradient Vanishing)이라고 한다. 이런 문제를 해결하기 위해 RNN에 게이트를 추가한 LSTM, GRU 등의 신경망이 등장하게 된다.
+순환 신경망은 여러 장점을 가지고 있습니다. 첫 번째로 이론상으로는 아무리 긴 시퀀스라도 처리가 가능합니다. 물론 엄청난 메모리를 필요로 하기 때문에 실제로는 일정 길이 이상의 시퀀스를 다루는 데에는 현실적인 한계가 있습니다. 두 번째로 시퀀스의 길이가 길어지더라도 모델 사이즈가 커지지 않습니다. 위에서 살펴본 가장 단순한 순환 신경망의 경우 은닉층 1개만으로 긴 시퀀스를 처리할 수 있습니다. 마지막으로 이론상으로는 Time-step $t$ 이전에 입력된 모든 입력 벡터의 정보를 사용할 수 있습니다. $\mathbf{h}_t$ 는 매 Time-step 마다의 입력 벡터 $\mathbf{x}_1, \mathbf{x}_2, \cdots, \mathbf{x}_t$ 를 정보를 모두 가지고 있습니다. Hidden-state 벡터가 잘 작동하기만 한다면 모든 입력 벡터의 정보를 끝까지 잘 전달할 수 있을 것입니다.
+
+### Problems
+
+문제는 순환 신경망의 이런 장점이 이론상으로만 가능하다는 데에 있습니다. 첫 번째 문제는 학습에 걸리는 시간이 너무 느리다는 것입니다. 순환 신경망은 입력 벡터가 순차적으로 입력되기 때문에 모든 벡터에 대한 정보를 한꺼번에 계산할 수 없습니다. 이 문제는 모든 토큰을 동시에 입력한 뒤에 위치 벡터를 따로 처리해주는 [트랜스포머(Transformer)](https://yngie-c.github.io/nlp/2020/07/01/nlp_transformer/)에 가서야 해결됩니다.
+
+기본적인 순환 신경망(Vanilla RNN)의 가장 큰 단점은 **장기 의존성(Long-Term Dependency)** 문제 입니다. 이 장기 의존성 문제 때문에 실제로는 마지막 장점이 발휘되지 못하지요. 장기 의존성 문제란 시퀀스가 길어질 때 Hidden-state 벡터 $\mathbf{h}_t$ 가 시퀀스 앞쪽 입력 벡터의 정보를 제대로 간직하지 못하는 현상입니다. 아래의 예를 보겠습니다.
+
+> *"Tom was watching TV in his room. Mary came into the room. Mary said hi to (    ?    )."* 
+
+괄호 안에 들어갈 단어는 *"Tom"* 입니다. *"Tom"* 을 정확히 예측하기 위해서는 이전에 등장하는 단어들의 의미를 모두 기억하고 있어야 합니다. 하지만 역전파 과정에서 활성화 함수의 역전파를 거칠 때마다 정보가 점점 사라지는 **기울기 소실(Gradient vanishing)**이 발생합니다. 장기 의존성 문제를 해결하기 위해 수많은 연구가 있었습니다. 그 결과 은닉층에 게이트를 추가한 **장단기 기억망(Long Short Term Memory, LSTM)**과 **게이트 순환 유닛(Gated Recurrent Unit, GRU)**등이 탄생하였습니다. 게다가 모든 Time-step에 대한 Hidden state 벡터를 사용하는 **어텐션(Attention)** 방법도 제시되었습니다.
+
+
+
+## 여러가지 RNN
+
+위에서 살펴본 순환 신경망 구조 외에도 입/출력 벡터를 어떻게 처리할 지에 따라 여러가지 순환 신경망으로 구분할 수 있습니다. 아래는 여러 순환 신경망을 입/출력 벡터의 형태에 따라 구분한 것입니다. 
+
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/85701189-18b78580-b718-11ea-93c5-b63aa5b64186.png" alt="diverse_rnn" style="zoom:50%;" /></p>
+
+<p align="center" style="font-size:80%">이미지 출처 : <a href="http://cs231n.stanford.edu/syllabus.html">cs231n.stanford.edu</a></p>
+
+위 그림에서 2번째 있는 일대다 구조를 가지는 순환 신경망이 사용되는 대표적인 태스크는 이미지 캡셔닝(Image captioning)입니다. 특정 이미지를 입력하면 이를 묘사하는 문장을 생성합니다. Non-sequential 데이터를 입력하여 Seqential 한 데이터를 출력하는 대표적인 태스크입니다.
+
+3번째에 있는 순환 신경망은 다대일 구조를 갖습니다. 이런 순환 신경망이 사용되는 대표적인 태스크는 감성 분석과 같은 [문서 분류](https://yngie-c.github.io/nlp/2020/07/24/nlp_doc_classification_rnn/)가 있습니다. 문서 분류에서는 Sequential 데이터인 문서를 입력받은 뒤에 이를 모아 해당 문서의 클래스를 판단합니다.
+
+다대다 구조는 두 가지로 분류됩니다. 4번째와 같이 모든 입력 벡터를 다 받아들인 뒤에 여러 개의 벡터를 출력하는 구조가 있고, 5번째와 같이 입력 벡터마다 즉시 벡터를 출력하는 구조가 있습니다. 전자를 사용하는 대표적인 태스크는 기계 번역(Machine translation)입니다. 번역하고자 하는 문장의 단어를 모두 받아들인 후 번역된 문장의 단어를 출력합니다. 후자를 사용하는 태스크에는 프레임 단위의 영상 분류가 있습니다.
+
+지금가지는 은닉층이 1개인 순환 신경망에 대해서만 알아보았으나 실제로는 층이 여러 개인 다층 순환 신경망(Multi Layer RNN)이 사용됩니다. 다층 순환 신경망의 대략적인 구조는 아래와 같습니다.
+
+<img src="https://user-images.githubusercontent.com/45377884/108669822-1a448200-7521-11eb-9b4b-e1f37c5c0dd0.png" alt="multilayer_rnn" style="zoom: 50%;" />
+
+<p align="center" style="font-size:80%">이미지 출처 : <a href="http://cs231n.stanford.edu/syllabus.html">cs231n.stanford.edu</a></p>
+
