--- a/_posts/2020-07-04-nlp_bert.md
+++ b/_posts/2020-07-04-nlp_bert.md
@@ -27,7 +27,7 @@ tag: NLP
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="http://jalammar.github.io/illustrated-bert/">jalammar.github.io</a></p>
 
-둘 모두 트랜스포머의 인코더 블록을 여러 개 중첩한 모델입니다. Base 모델은 총 12개의 인코더 블록(Layer)을 사용하였고, 은닉 벡터(Hidden vector)의 차원은 768, 어텐션 헤드(Attention head)는 12개를 사용하였습니다. $\text{BERT}_\text{BASE} (L=12, H=768, A=12)$ 모델의 파라미터는 총 1억 1천만(110M)개로 이전에 발표되었던 [GPT](https://yngie-c.github.io/nlp/2020/07/05/nlp_gpt/)의 Base 모델과 비슷합니다. $(\# \text{ of params GPT} = 117M)$
+둘 모두 트랜스포머의 인코더 블록을 여러 개 중첩한 모델입니다. Base 모델은 총 12개의 인코더 블록(Layer)을 사용하였고, 은닉 벡터(Hidden vector)의 차원은 768, 어텐션 헤드(Attention head)는 12개를 사용하였습니다. $\text{BERT}_\text{BASE} (L=12, H=768, A=12)$ 모델의 파라미터는 총 1억 1천만(110M)개로 이전에 발표되었던 [GPT](https://yngie-c.github.io/nlp/2020/07/05/nlp_gpt/)의 Base 모델(117M)과 비슷합니다.
 
 Large 모델은 총 24개의 인코더와 1024 차원의 은닉 벡터, 16개의 어텐션 헤드로 구성됩니다. $\text{BERT}_\text{BASE} (L=24, H=1024, A=16)$ 모델의 파라미터는 3억 4천만(340M)개의 파라미터를 사용합니다. 아래는 각 모델에 사용된 인코더 블록을 도식화한 이미지입니다.
 
