--- a/_posts/2021-02-23-numpy.md
+++ b/_posts/2021-02-23-numpy.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Numpy (1) - ndarray 생성, 데이터 타입 및 크기 다루기
-category: Python
-tag: Python
+category: Numpy
+tag: Numpy
 ---
 
  
