--- a/_posts/2021-03-7-svm.md
+++ b/_posts/2021-03-7-svm.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 선형 하드마진 서포트 벡터 머신(Linear & Hard Margin SVM)
+title: 서포트 벡터 머신(Linear & Hard Margin SVM)
 category: Machine Learning
 tag: Machine-Learning
 ---
