--- a/_posts/2021-03-21-gbm.md
+++ b/_posts/2021-03-21-gbm.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: GBM
+title: GBM(Gradient Boosting Machine)
 category: Machine Learning
 tag: Machine-Learning
 ---
@@ -137,7 +137,7 @@ $$
 $$
 \text{Influence}_j(T) = \sum^{L-1}_{i=1} (IG_i \times \mathbf{1}(S_i = j))
 $$
- 
+
 
 그래디언트 부스팅 머신에서 변수의 중요도는 각 트리마다 변수 $j$ 의 중요도를 평균내어 구합니다.
 
