--- a/_posts/2020-11-16-multivar.md
+++ b/_posts/2020-11-16-multivar.md
@@ -193,7 +193,7 @@ $$
 
 
 $$
-\vert J \vert = \left\vert\begin{array}{cc} \frac{\partial x_1}{\partial y_1} & \frac{\partial x_2}{\partial y_2} \\ \frac{\part x_2}{\part y_1} & \frac{\part x_2}{\part y_2} \end{array} \right\vert = \left\vert\begin{array}{cc} 1 & -1 \\ 0 & 1 \end{array} \right\vert
+\vert J \vert = \left\vert\begin{array}{cc} \frac{\partial x_1}{\partial y_1} & \frac{\partial x_2}{\partial y_2} \\ \frac{\partial x_2}{\part y_1} & \frac{\partial x_2}{\part y_2} \end{array} \right\vert = \left\vert\begin{array}{cc} 1 & -1 \\ 0 & 1 \end{array} \right\vert
 $$
 
 
