--- a/_posts/2020-11-16-multivar.md
+++ b/_posts/2020-11-16-multivar.md
@@ -193,7 +193,7 @@ $$
 
 
 $$
-\vert J \vert = \left\vert\begin{array}{cc} \frac{\partial x_1}{\partial y_1} & \frac{\partial x_2}{\partial y_2} \\ \frac{\partial x_2}{\part y_1} & \frac{\partial x_2}{\part y_2} \end{array} \right\vert = \left\vert\begin{array}{cc} 1 & -1 \\ 0 & 1 \end{array} \right\vert
+\vert J \vert = \left\vert\begin{array}{cc} \frac{\partial x_1}{\partial y_1} & \frac{\partial x_2}{\partial y_2} \\ \frac{\partial x_2}{\partial y_1} & \frac{\partial x_2}{\partial y_2} \end{array} \right\vert = \left\vert\begin{array}{cc} 1 & -1 \\ 0 & 1 \end{array} \right\vert
 $$
 
 
@@ -221,3 +221,4 @@ f_{Y_1}(y_1) &= \int 1 dy_2 \\
 $$
 
 위 두 가지 방법(누적 확률 분포 사용, 변환)을 사용하면 기존의 확률 변수와 연관된 새로운 확률 변수로 변환할 수 있습니다.
+
