--- a/_posts/2021-03-18-ensemble.md
+++ b/_posts/2021-03-18-ensemble.md
@@ -118,8 +118,16 @@ E_\text{Ensemble} &= \mathbb{E}_\mathbf{x}\bigg[\big\{\frac{1}{M}\sum_{i=1}^My_m
 \end{aligned}
 $$
 
+만약 모델의 $\epsilon$ 평균이 0이라고 가정하면 방정식 $\mathbb{E}_\mathbf{x}[\epsilon_m(\mathbf{x})] = 0$ 을 만족합니다. 그리고 앙상블에 사용된 각각의 모델이 연관되어 있지 않는 가정하에서는 아래의 방정식을 만족합니다.
 
-만약 모델의 $\epsilon$ 평균이 0이고 $\mathbb{E}_\mathbf{x}[\epsilon_m(\mathbf{x})] = 0$, 각 모델이 연관되어 있지 않다는 $\mathbb{E}_\mathbf{x}[\epsilon_m(\mathbf{x})\epsilon_l(\mathbf{x})] = 0 \quad (m \neq l)$ 가정하에서는 앙상블 모델은 각 모델의 평균의 $1/M$ 의 오차를 갖게 됩니다.
+
+$$
+\mathbb{E}_\mathbf{x}[\epsilon_m(\mathbf{x})\epsilon_l(\mathbf{x})] = 0 \quad (m \neq l)
+$$
+
+
+이 두 가지 가정하에서, 앙상블 모델은 각 모델의 평균의 $1/M$ 의 오차를 갖게 됩니다.
+
 
 
 $$
@@ -127,8 +135,8 @@ E_\text{Ensemble} = \frac{1}{M} E_\text{Avg}
 $$
 
 
-하지만 위 가정은 현실에서는 거의 불가능합니다. 앙상블 오차의 상한은 [코시-슈바르츠 부등식](https://ko.wikipedia.org/wiki/%EC%BD%94%EC%8B%9C-%EC%8A%88%EB%B0%94%EB%A5%B4%EC%B8%A0_%EB%B6%80%EB%93%B1%EC%8B%9D)[^2]을 사용하여 구할 수 있습니다. 코시-슈바르츠 부등식은 다음과 같습니다.
 
+하지만 위 가정은 현실에서는 거의 불가능합니다. 앙상블 오차의 상한은 [코시-슈바르츠 부등식](https://ko.wikipedia.org/wiki/%EC%BD%94%EC%8B%9C-%EC%8A%88%EB%B0%94%EB%A5%B4%EC%B8%A0_%EB%B6%80%EB%93%B1%EC%8B%9D)[^2]을 사용하여 구할 수 있습니다. 코시-슈바르츠 부등식은 다음과 같습니다.
 
 $$
 (a^2+b^2)(x^2+y^2) \geq (ax + by)^2
